New template changes

--- a/_posts/2019-12-06-pane.md
+++ b/_posts/2019-12-06-pane.md
@@ -1,4 +1,5 @@
 ---
+layout: Recipe
 title: Pane
 description: La ricetta originale era per un pane di semola rimacinata, ma ho visto
   che con qualche correzione può funzionare bene anche con la farina di grano tenero
